Fix Credit Alignment

--- a/css/theme.css
+++ b/css/theme.css
@@ -276,9 +276,11 @@ ol {
 }
 
 .credit {
-  float: right;
-  margin-right: 25px;
-  margin-top: -40px;
+  margin-right: 10px;
+  margin-top: -30px;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-bottom: 12px;
 }
 
 form {
