--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -183,7 +183,9 @@ ol {
 
 // Img Credit
 .credit {
-	float: right;
-	margin-right: 25px;
-	margin-top: -40px;
+margin-right: 10px;
+margin-top: -30px;
+display: flex;
+flex-direction: row-reverse;
+margin-bottom: 12px;
 }
